# Hillel_NLP

./: .gitattributes  README.md  pyproject.toml  requirements.in  requirements.txt  run.sh
app/: main.py  utils.py
app/api/: api.py  classification.py  lda_dictionary.dict  lda_model.model  lda_model.model.id2word  mistral_endpoint.py  similarity.py
app/core/: config.py
app/models/: predict.py
app/services/: text_processing.py  train_doc2vec.py  train_lda.py
notebooks/: train_model.ipynb
tests/: test_api.py
