[tool.poetry]
name = "Hillel_NLP"
version = "0.1.0"
description = ""
authors = ["Anatolii Balakiriev <anatolii.balakiriev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
pydantic = "^1.9.0"
requests = "^2.27.1"
textdistance = "^4.2.1"
scikit-learn = "^1.1.1"
joblib = "^1.2.0"
pandas = "^1.5.3"
nltk = "^3.8.1"
numpy = "^1.21.5"
gensim = "^4.3.0"
scipy = "1.12.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"
tox = "^3.24.5"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["app", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"